# GML-connections

./: .gitignore  MIDTERM_QUESTIONS.md  README.md  check.py  checkWordNinja.py  compoundEdges.py  environment.yml  eval.py  eval_deepwalk.py  get_embeddings.py  load_conceptnet.py  load_connections.py  load_graphs.py  load_khop_conceptnet.py  load_swow.py  notes_megha.txt  pyproject.toml  test_phonetic_enhancement.py  utils.py
baselines/: deepwalk.py  dine.py  graphsage_baseline.py
conceptnet/: conceptnet_filtered_edges.csv
connections_data/: Connections_Data.csv
data_exploration/: missing.py
models/: approach_summary.md  graphsage_baseline_model.py  graphsage_best.pth  graphsage_phonetic_best.pth
scripts/: analyse_dimensions.py  compgcn.py  create_connections_subgraphs.py  dine.py  eval_connections.py  eval_dimensions.py  eval_using_subgraph.py  load_connections.py  new_eval_connections.py  utils.py
solution/: NODES.md  graphsage_advanced.py
