[project]
name = "gml-connections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "node2vec>=0.5.0",
    "scikit-learn>=1.7.2",
    "torch-geometric>=2.6.1",
    "torch>=2.8.0",
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "sentence-transformers>=5.1.1",
]
