[project]
name = "gml-connections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "node2vec>=0.5.0",
    "scikit-learn>=1.7.2",
    "torch-geometric>=2.6.1",
    "torch>=2.8.0",
    "pandas>=2.3.3",
    "wordninja>=2.0.0",
    "fasttext>=0.9.3",
    "tqdm>=4.67.1",
]
